--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,4 +4,5 @@ server:
 spring:
   kafka:
     producer:
-      bootstrap-servers: host.docker.internal:9092
+      bootstrap-servers: localhost:9092
+#      bootstrap-servers: host.docker.internal:9092
